changed styles directory origin, added more sections to html

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,11 @@
             <button class="concert-search-button">Search</button>
         </section>
     </section>
-    <hr class="divider">
+    <section class="search-results">
+    </section>
+    <hr>
+    <section class="itenerary-display">
+    </section>
 </body>
 
 </html>
