--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1 id="test">Test</h1>
     <div class="test">
         <p>Test</p>
         <button></button>
     </div>
-    <script src="/scripts/dom.js"></script>
+    <script src="/src/scripts/dom.js"></script>
+    <script src="/src/scripts/concerts-getter.js"></script>
+    <script src="/src/scripts/search-concerts.js"></script>
 </body>
 </html>
