added ids to make dom manip. easier

--- a/src/index.html
+++ b/src/index.html
@@ -16,25 +16,26 @@
     <section class="search-container">
         <section class="parks-search-container">
             <input type="text" placeholder="parks by feature" class="parks-search-input">
-            <button class="parks-search-button">Search</button>
+            <button class="parks-search-button" id="button1">Search</button>
         </section>
         <section class="art-search-container">
             <input type="text" placeholder="public art by description">
-            <button>Search</button>
+            <button class="art-search-button" id="button2">Search</button>
         </section>
         <section class="restaurant-search-container">
             <input type="text" placeholder="restaurant by genre(of food)" class="restaurant-search-input">
-            <button class="restaurant-search-button">Search</button>
+            <button class="restaurant-search-button" id="button3">Search</button>
         </section>
         <section class="concert-search-container">
             <input type="text" placeholder="concerts by genre">
-            <button class="concert-search-button">Search</button>
+            <button class="concert-search-button" id="button4">Search</button>
         </section>
     </section>
     <section class="search-results">
     </section>
     <hr>
-    <section class="itenerary-display">
+    <section class="itinerary-display">
+        <h2>My Itinerary</h2>
     </section>
 </body>
 
