--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,19 @@
     <hr>
     <section class="search-container">
         <section class="parks-search-container">
-            <input type="text" placeholder="parks by feature" class="parks-search-input">
+            <input type="text" placeholder="parks by feature" id="parks-search-input">
             <button class="parks-search-button" id="button1">Search</button>
         </section>
         <section class="art-search-container">
-            <input type="text" placeholder="public art by description">
+            <input type="text" placeholder="public art by description" id="art-search-input">
             <button class="art-search-button" id="button2">Search</button>
         </section>
         <section class="restaurant-search-container">
-            <input type="text" placeholder="restaurant by genre(of food)" class="restaurant-search-input">
+            <input type="text" placeholder="restaurant by genre(of food)" id="restaurant-search-input">
             <button class="restaurant-search-button" id="button3">Search</button>
         </section>
         <section class="concert-search-container">
-            <input type="text" placeholder="concerts by genre" id="concert-input">
+            <input type="text" placeholder="concerts by genre" id="concert-search-input">
             <button class="concert-search-button" id="button4">Search</button>
         </section>
     </section>
