--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Welcome to Nashville</title>
   </head>
 
   <body>
     <h1>Welcome to Nashville</h1>
-    <hr />
+    <hr>
     <h2>What do you want to see today?</h2>
-    <hr />
+    <hr>
     <section class="search-container">
       <section class="parks-search-container">
-        <select id="parkFeatures">
-          <option value="" disabled selected>Choose Features</option>
+        <select class = "feature-list"id="parkFeatures">
+          <option value="" disabled selected>Choose Feature</option>
           <option value="community_center">Community Center</option>
           <option value="nature_center">Nature Center</option>
           <option value="playground">Playground</option>
@@ -74,9 +74,10 @@
       </section>
     </section>
     <section class="search-results"></section>
-    <hr />
+    <hr>
     <section class="itinerary-display">
       <h2>My Itinerary</h2>
+      <ul id = "list"></ul>
     </section>
     <script src="/src/scripts/dom.js"></script>
     <script src="/src/scripts/parks-getter.js"></script>
