dom component rendering

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/src/styles/main.css">
     <title>Welcome to Nashville</title>
 </head>
 
@@ -16,7 +16,7 @@
     <section class="search-container">
         <section class="parks-search-container">
             <input type="text" placeholder="parks by feature" id="parks-search-input">
-            <button class="parks-search-button" id="button1">Search</button>
+            <button class="parks-search-button" id="button-1">Search</button>
         </section>
         <section class="art-search-container">
             <input type="text" placeholder="public art by description" id="art-search-input">
@@ -36,6 +36,12 @@
     <hr>
     <section class="itinerary-display">
         <h2>My Itinerary</h2>
+        <section class="results">
+            <section class="park-results"></section>
+            <section class="art-results"></section>
+            <section class="restaurant-results"></section>
+            <section class="concert-results"></section>
+        </section>
     </section>
     <script src="/src/scripts/dom.js"></script>
     <script src="/src/scripts/concerts-getter.js"></script>
