trying to set up API key

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <button class="art-search-button" id="button2">Search</button>
         </section>
         <section class="restaurant-search-container">
-            <input type="text" placeholder="restaurant by genre(of food)" id="restaurant-search-input">
+            <input type="text" placeholder="restaurant by price (1-4)" id="restaurant-search-input">
             <button class="restaurant-search-button" id="button3">Search</button>
         </section>
         <section class="concert-search-container">
@@ -37,12 +37,14 @@
     <section class="itinerary-display">
         <h2>My Itinerary</h2>
     </section>
-    <script src="/src/scripts/dom.js"></script>
+    <!-- <script src="/src/scripts/dom.js"></script>
     <script src="/src/scripts/concerts-getter.js"></script>
     <script src="/src/scripts/search-concerts.js"></script>
     <script src="/src/scripts/make-components.js"></script>
     <script src="/src/scripts/results.js"></script>
-    <script src="/src/scripts/itinerary.js"></script>
+    <script src="/src/scripts/itinerary.js"></script> -->
+    <script src="/scripts/restaurants-getter.js"></script>
+    <script src="/scripts/search-restaurants.js"></script>
 </body>
 
 </html>
