--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,12 @@
     <script src="/src/scripts/dom.js"></script>
     <script src="/src/scripts/concerts-getter.js"></script>
     <script src="/src/scripts/search-concerts.js"></script>
+    <script src="/src/scripts/public-art-getter.js"></script>
+    <script src="/src/scripts/search-art.js"></script>
     <script src="/src/scripts/make-components.js"></script>
     <script src="/src/scripts/results.js"></script>
     <script src="/src/scripts/itinerary.js"></script>
+    <script src="/src/scripts/keys.js"></script>
 </body>
 
 </html>
