Rendered Parks to Dom

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <hr>
     <section class="search-container">
       <section class="parks-search-container">
-        <select class = "feature-list"id="parkFeatures">
+        <select class = "feature-list"id="park-search-input">
           <option value="" disabled selected>Choose Feature</option>
           <option value="community_center">Community Center</option>
           <option value="nature_center">Nature Center</option>
