--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
     <section class="itinerary-display">
         <h2>My Itinerary</h2>
         <section class="results">
-            <section class="park-results"></section>
+            <section class="parks-results"></section>
             <section class="art-results"></section>
             <section class="restaurant-results"></section>
             <section class="concert-results"></section>
