got opentable api working and began working on search function

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Welcome to Nashville</title>
 </head>
 
@@ -43,12 +43,12 @@
             <section class="concert-results"></section>
         </section>
     </section>
-    <!-- <script src="/src/scripts/dom.js"></script>
-    <script src="/src/scripts/concerts-getter.js"></script>
-    <script src="/src/scripts/search-concerts.js"></script>
-    <script src="/src/scripts/make-components.js"></script>
-    <script src="/src/scripts/results.js"></script>
-    <script src="/src/scripts/itinerary.js"></script> -->
+    <!-- <script src="/scripts/dom.js"></script>
+    <script src="/scripts/concerts-getter.js"></script>
+    <script src="/scripts/search-concerts.js"></script>
+    <script src="/scripts/make-components.js"></script>
+    <script src="/scripts/results.js"></script>
+    <script src="/scripts/itinerary.js"></script> -->
     <script src="/scripts/restaurants-getter.js"></script>
     <script src="/scripts/search-restaurants.js"></script>
 </body>
