--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       <section class="restaurant-search-container">
         <input
           type="text"
-          placeholder="restaurant by genre(of food)"
+          placeholder="restaurant by price (1-4)"
           id="restaurant-search-input"
         />
         <button class="restaurant-search-button" id="button3">Search</button>
@@ -88,9 +88,11 @@
     <script src="/src/scripts/parks-getter.js"></script>
     <script src="/src/scripts/search-parks.js"></script>
     <script src="/src/scripts/concerts-getter.js"></script>
+    <script src="/src/scripts/restaurants-getter.js"></script>
     <script src="/src/scripts/search-concerts.js"></script>
     <script src="/src/scripts/public-art-getter.js"></script>
     <script src="/src/scripts/search-art.js"></script>
+    <script src="/src/scripts/search-restaurants.js"></script>
     <script src="/src/scripts/make-components.js"></script>
     <script src="/src/scripts/results.js"></script>
     <script src="/src/scripts/itinerary.js"></script>
