MVP of itinerary JSON

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
     <hr>
     <section class="itinerary-display">
         <h2>My Itinerary</h2>
+        <button id="save-itin">Save itinerary</button>
         <section class="results">
             <section class="parks-results"></section>
             <section class="art-results"></section>
