--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div class="content-container">
         <div class="header-container">
-          <h1>Welcome to Nashville. </h1>
+          <h1>Welcome to Nashville, </h1>
           <p>The best place on earth. </p>
           <hr id="first-hr">
           <h2>What would you like to do today?</h2>
