--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,7 @@
             </div>
             <section class="itinerary-display">
                 <h2>My Itinerary</h2>
+                <button id="record-itin">Save itinerary</button>
                 <section class="results">
                     <section class="parks-results"></section>
                     <section class="art-results"></section>
